typed_js_controller.js

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,9 @@
 <div class="home-banner">
-  <h1>AgroCash</h1>
-  <p>
+  <h1>Crédito para o
+  produtor rural</h1>
+  <h1>
   <span data-controller="typed-js"></span>
-</p>
+  </h1>
 </div>
 
 <div class="container">
