home1 home2 home3

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,9 +7,74 @@
 </div>
 
 <div class="container">
-  <div class="row justify-content-center">
-    <div class="col-6">
-      <%= "Lorem ipsum dolor sit amet, consectetur adipisicing elit " * 100 %>
+  <section class="home-section home-how-it-works">
+    <div class="row justify-content-center">
+      <div class="col-6 image_wrapper">
+        <img class="scale-with-grid" src="https://nagro.com.br/wp-content/uploads/2021/05/celular-nagro-2.png" alt="celular-nagro-2" title="" width="320" height="550">
+      </div>
+
+      <div class="col-6 align-items-center">
+        <h2 style="color:#0E0000;"> Crédito na palma <br> da sua mão. <br> Sem sair da fazenda, <br> a solicitação é <br>  100% digital.</h2>
+        <a class="btn btn-agro" href="">Conheça as linhas de Crédito</a>
+      </div>
     </div>
-  </div>
+  </section>
+
+  <!-- ####### -->
+  <section class="home-section home-how-it-works">
+    <h3><strong>Como funciona o empréstimo com a AgroCash?</strong></h3>
+    <div class="row mt-5">
+      <div class="col-6 justify-content-space-between">
+        <h4>A AgroCash conecta <strong>agricultores</strong> <br>que precisam de crédito a <strong>pessoas e instituições</strong> <br>com dinheiro para emprestar</h4>
+        <div class="elementor-widget-container">
+        <img src="https://www.nexoos.com.br/wp-content/uploads/elementor/thumbs/Imagem-Rapaz-Poltrona-phypkaxdyqafvwig4j3foem4u8hv3patmw5r49wtl2.png" title="Imagem Rapaz Poltrona" alt="Imagem Rapaz Poltrona" height="400"> </div>
+      </div>
+
+      <div class="col-6 justify-content-space-between">
+        <div class="card-product">
+          <div class="card-product-infos">
+            <figure class="elementor-image-box-img">
+              <img width="20" height="20" src="https://www.nexoos.com.br/wp-content/uploads/2021/12/Conta-corrente-1.png" class="attachment-full size-full" alt="" loading="lazy">
+              <h2> 1. Faça sua solicitação</h2>
+            </figure>
+
+            <p>Product description with <strong>relevant info</strong> only.</p>
+          </div>
+        </div>
+
+        <div class="card-product mt-3">
+          <div class="card-product-infos">
+            <figure class="elementor-image-box-img">
+              <img width="20" height="20" src="https://www.nexoos.com.br/wp-content/uploads/2021/12/Lupa.png" class="attachment-full size-full" alt="" loading="lazy">
+              <h2> 2. Análise de crédito</h2>
+            </figure>
+
+            <p>Product description with <strong>relevant info</strong> only.</p>
+          </div>
+        </div>
+
+        <div class="card-product mt-3">
+          <div class="card-product-infos">
+            <figure class="elementor-image-box-img pr-5px">
+              <img width="20" height="20" src="https://www.nexoos.com.br/wp-content/uploads/2021/12/PC.png" class="attachment-full size-full" alt="" loading="lazy">
+              <h2> 3. Rodada de capitação</h2>
+            </figure>
+
+            <p>Product description with <strong>relevant info</strong> only.</p>
+          </div>
+        </div>
+
+        <div class="card-product mt-3">
+          <div class="card-product-infos">
+            <figure class="elementor-image-box-img">
+              <img width="20" height="20" src="https://www.nexoos.com.br/wp-content/uploads/2021/12/Mao.png" class="attachment-full size-full" alt="" loading="lazy">
+              <h2> 4. Dinheiro na sua conta</h2>
+            </figure>
+
+            <p>Product description with <strong>relevant info</strong> only.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </div>
