mudei imagem section3

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,6 +7,7 @@
 </div>
 
 <div class="container">
+  <!-- ### Home 2 ### -->
   <section class="home-section home-how-it-works mt-2">
     <div class="row justify-content-center align-items-center">
       <div class="col-6 image_wrapper">
@@ -20,14 +21,15 @@
     </div>
   </section>
 
-  <!-- ####### -->
+  <!-- #### Home3 ### -->
   <section class="home-section home-how-it-works">
     <h3><strong>Como funciona o empréstimo com a AgroCash?</strong></h3>
     <div class="row mt-5">
       <div class="col-6 justify-content-space-between">
         <h4>A AgroCash conecta <strong>agricultores</strong> <br>que precisam de crédito a <strong>pessoas e instituições</strong> <br>com dinheiro para emprestar</h4>
         <div class="elementor-widget-container">
-        <img src="https://www.nexoos.com.br/wp-content/uploads/elementor/thumbs/Imagem-Rapaz-Poltrona-phypkaxdyqafvwig4j3foem4u8hv3patmw5r49wtl2.png" title="Imagem Rapaz Poltrona" alt="Imagem Rapaz Poltrona" height="400"> </div>
+          <%= image_tag "vaso-sem-fundo.png", alt: "vaso", height: 375 %>
+        </div>
       </div>
 
       <div class="col-6 justify-content-space-between">
@@ -78,7 +80,7 @@
     </div>
   </section>
 
-  <!-- ############ -->
+  <!-- ### Home4 ### -->
   <section class="home-4">
     <div class="text-center">
       <h1>Nossos números</h1>
