--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -31,3 +31,7 @@
 .home-bullet-point-1, .home-bullet-point-2, .home-bullet-point-3 {
   position: relative;
 }
+
+.home2-color {
+  background-color: $dark-green2;
+}
