--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -21,3 +21,4 @@ $light-green1: #9CEC5B; // Arthur
 $orange-yellow: #F3CF6D; // Arthur
 $orange-champagne: #F2CC8F;
 $rosa: rgb(238, 105, 134);
+$marrom: #A97155;
