--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,14 +4,19 @@
   background-color: transparent;
 }
 
+.navbar-lewagon h1 {
+  color: $dark-green;
+}
+
 .navbar-lewagon .navbar-collapse {
   flex-grow: 0;
 }
 
 .navbar-lewagon .navbar-brand img {
-  width: 40px;
+  width: 50px;
+  border-radius: 50px;
 }
 
 .navbar-lewagon-white {
-  background-color: white;
+  background-color: $marrom;
 }
