--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,12 +6,12 @@
   </h1>
 </div>
 
-<div class="container">
+<div class="container-branco">
   <!-- ### Home 2 ### -->
-  <section class="home-section home-how-it-works mt-2">
+  <section class="home2-section home-how-it-works mt-2">
     <div class="row justify-content-center align-items-center">
       <div class="col-6 image_wrapper">
-        <img class="scale-with-grid" src="https://nagro.com.br/wp-content/uploads/2021/05/celular-nagro-2.png" alt="celular-nagro-2" title="" width="320" height="550">
+        <%= image_tag "celular-agro-definitivo.png", alt: "Le Wagon", height: 425, width: 250 %>
       </div>
 
       <div class="col-6 align-items-center">
@@ -20,8 +20,10 @@
       </div>
     </div>
   </section>
+</div>
 
   <!-- #### Home3 ### -->
+<div class="container">
   <section class="home-section home-how-it-works">
     <h3><strong>Como funciona o empréstimo com a AgroCash?</strong></h3>
     <div class="row mt-5">
@@ -79,10 +81,12 @@
       </div>
     </div>
   </section>
+</div>
 
   <!-- ### Home4 ### -->
-  <section class="home-4">
-    <div class="text-center">
+<div class="container-verde">
+  <section class="home4e6-section">
+    <div class="home4e6-description text-center">
       <h1>Nossos números</h1>
       <h5>Agricultor</h5>
       <p class="p-5"><%="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum temporibus, eveniet nobis dolorum excepturi aspernatur nulla ad expedita corporis hic aliquam facere officiis illo necessitatibus. Dolore numquam at porro quos!" * 2%></p>
@@ -106,12 +110,14 @@
       </div>
     </div>
   </section>
+</div>
 
 <!-- ### Home5 ### -->
-<section class="home-section home-how-it-works">
-    <div class="text-center">
+<div class="container">
+  <section class="home-section home-how-it-works">
+    <div class="home5-description text-center">
       <h1>Invista com rentabilidade acima da média do mercado</h1>
-      <h5>Como funciona os investimentos com a AgroCash</h5>
+      <h5 class="p-2">Como funciona os investimentos com a AgroCash</h5>
       <p class="p-5"><%="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum temporibus, eveniet nobis dolorum excepturi aspernatur nulla ad expedita corporis hic aliquam facere officiis illo necessitatibus. Dolore numquam at porro quos!"%></p>
     </div>
 
@@ -145,11 +151,13 @@
       </div>
     </div>
   </section>
+</div>
 
 
   <!-- ## Home6 ## -->
-  <section>
-    <div class="text-center">
+<div class="container-verde">
+  <section class="home4e6-section">
+    <div class="text-center home4e6-description">
       <h1>Nossos números</h1>
       <h5>investidor</h5>
       <p class="p-5"><%="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum temporibus, eveniet nobis dolorum excepturi aspernatur nulla ad expedita corporis hic aliquam facere officiis illo necessitatibus. Dolore numquam at porro quos!"%></p>
@@ -182,3 +190,4 @@
     </div>
   </section>
 </div>
+<!--</div>-->
