ajustes na home

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,7 +5,7 @@
 }
 
 .navbar-lewagon h1 {
-  color: $dark-green;
+  color: green;
 }
 
 .navbar-lewagon .navbar-collapse {
@@ -18,5 +18,5 @@
 }
 
 .navbar-lewagon-white {
-  background-color: $marrom;
+  background-color: $light-gray1;
 }
