--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -22,3 +22,8 @@ $orange-yellow: #F3CF6D; // Arthur
 $orange-champagne: #F2CC8F;
 $rosa: rgb(238, 105, 134);
 $marrom: #A97155;
+$light-gray1: #e9ecef;
+$light-gray2: #dee2e6;
+$light-gray3: #ced4da;
+$medium-gray: #adb5bd;
+$dark-gray: #6c757d;
