--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 <div class="home-banner">
   <h1>Crédito para o
   produtor rural</h1>
-  <h1>
-  <span data-controller="typed-js"></span>
+  <h1 class="color-green">
+    <span data-controller="typed-js"></span>
   </h1>
 </div>
 
@@ -29,7 +29,7 @@
     <div class="row mt-5">
       <div class="col-6 justify-content-space-between">
         <h4>A AgroCash conecta <strong>agricultores</strong> <br>que precisam de crédito a <strong>pessoas e instituições</strong> <br>com dinheiro para emprestar</h4>
-        <div class="elementor-widget-container">
+        <div class="vaso-img">
           <%= image_tag "vaso-sem-fundo.png", alt: "vaso", height: 375 %>
         </div>
       </div>
