--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -6,7 +6,9 @@
   height: 100px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
+  margin-bottom: 0;
 }
+
 .footer-links {
   display: flex;
   align-items: center;
