--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -4,3 +4,60 @@
   border-radius: 4px;
   background: #E67E22;
 }
+
+.btn-login {
+  background-color: #3F893F;
+  text-decoration: none;
+  // border-radius: 10%;
+  color: #b8c590;
+  margin-bottom: 15px;
+}
+
+.btn-login:hover {
+  background-color: #b8c590;
+  color: #3F893F;
+  text-decoration: none;
+}
+
+.btn-signup {
+  background-color:  #3F893F;
+  padding: 8px 24px;
+  text-decoration: none;
+  // border-radius: 10%;
+  color: #b8c590;
+}
+
+.btn-signup:hover {
+  background-color: #b8c590;
+  color: #3F893F;
+  text-decoration: none;
+}
+
+
+.btn-forgot {
+  color: black;
+  text-decoration: none;
+
+}
+
+ .btn-profile {
+  background-color: #3F893F;
+  text-decoration: none;
+  // border-radius: 10%;
+  color: #b8c590;
+  margin-top: 20px;
+
+ }
+
+.btn-profile:hover {
+   background-color: #b8c590;
+   color: #3F893F;
+   text-decoration: none;
+}
+
+ a.btn-profile {
+  // border-radius: 29%;
+  padding: 18px;
+  margin-right: 18px;
+  margin-top: 41px;
+}
