--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,9 +1,9 @@
 .footer {
-  background: #F4F4F4;
+  background: #D4D5D9;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  height: 100px;
+  justify-content: center;
+  height: 90px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
   margin-bottom: 0;
