--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -39,6 +39,56 @@
   padding-left: 15px;
 }
 
+.container_signin {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-top: 141px;
+  justify-content: space-around;
+  display: flex;
+}
+
+.container_user1 {
+  margin-top: 180px;
+  margin-left: 200px;
+}
+.container_user2 {
+  margin-top: 100px;
+}
+
+.container_address {
+  margin-top: 150px;
+}
+
+.address {
+  margin-bottom: 20px;
+}
+
+.container_score {
+  margin-top: 120px;
+  margin-left: 100px;
+}
+
+.container_proposal {
+  margin-top: 120px;
+  margin-left: 100px;
+}
+
+.proposal {
+  margin-left: 720px;
+  margin-top: 77px;
+}
+
+.score1 {
+  margin-top: 50px;
+  margin-left: 500px;
+}
+
+.score2 {
+  position: relative;
+  margin-top: -554px;
+  margin-left: 900px;
+}
+
 .container-branco {
   padding-right: 15px;
   padding-left: 15px;
