--- a/app/views/loan_proposals/show.html.erb
+++ b/app/views/loan_proposals/show.html.erb
@@ -12,6 +12,7 @@
           <%= link_to 'Aceitar Proposta', accept_loan_path(@loan_proposal) %>
         <% end %>
 
+        <% @var =  %>
 
     </div>
 </div>
