--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -1,9 +1,5 @@
-<div class="container mt-5 pt-5">
-<h1>ola</h1>
-<%= link_to 'New Address', new_user_address_path(current_user.id) %>
-<%= link_to 'Profile Risk', new_score_path %>
-<%= link_to 'Criar pedido de empréstimo', new_loan_proposal_path %>
-</div>
-
-<% @var = Score.find(current_user.id) %>
-<%= @var.risk %>
+<% if current_user.role == 'farmer' %>
+  <%= render 'farmer' %>
+<% elsif current_user.role == 'investor' %>
+  <%= render 'investor' %>
+<% end %>
