Add dotenv - Protect my secret data in .env file

--- a/app/views/loan_proposals/show.html.erb
+++ b/app/views/loan_proposals/show.html.erb
@@ -1,18 +1,21 @@
 <div class="container pt-5 mt-5">
-  <h1>Proposta de empréstimo</h1>
-    <div class= "row">
-      <div class="col-lg-8 pt-6">
-        <h5 class="my-3 pt-3"><strong>Valor do montante: <%= @loan_proposal.amount %></strong></h5>
-        <h5 class="my-3 pt-3"><strong>Descrição da proposta: <%= @loan_proposal.description %></strong></h5>
-        <h5 class="my-3 pt-3"><strong>Status: <%= @loan_proposal.accepted %></strong></h5>
+  <div card= "card-login">
+  <img src="https://www.pexels.com/pt-br/foto/campo-de-milho-durante-o-dia-96715/" />
+
+    <div class="card-proposal-infos">
+      <h2>Proposta de empréstimo</h2>
+      <div class= "row">
+        <div class="col-lg-8 pt-6">
+          <h2 class="my-3 pt-3"><strong>Valor do montante: <%= @loan_proposal.amount %></strong></h2>
+          <h2 class="my-3 pt-3"><strong>Descrição da proposta: <%= @loan_proposal.description %></strong></h2>
+          <h2 class="my-3 pt-3"><strong>Status: <%= @loan_proposal.accepted %></strong></h2>
+        </div>
+
+          <%= link_to 'Voltar para Home', user_profile_path %>
+          <% if current_user.role == 'investor' && @loan_proposal.accepted != 'Aceito' %>
+            <%= link_to 'Aceitar Proposta', accept_loan_path(@loan_proposal) %>
+          <% end %>
       </div>
-
-        <%= link_to 'Voltar para Home', user_profile_path %>
-        <% if current_user.role == 'investor' && @loan_proposal.accepted != 'Aceito' %>
-          <%= link_to 'Aceitar Proposta', accept_loan_path(@loan_proposal) %>
-        <% end %>
-
-        <% @var =  %>
-
     </div>
+  </div>
 </div>
