--- a/app/views/loan_proposals/show.html.erb
+++ b/app/views/loan_proposals/show.html.erb
@@ -2,17 +2,15 @@
   <h1>Proposta de empréstimo</h1>
     <div class= "row">
       <div class="col-lg-8 pt-6">
-        <h5 class="my-3 pt-3"><strong>Valor do montante: <%= @loan_proposal.amount %></strong></h5>
-        <h5 class="my-3 pt-3"><strong>Descrição da proposta: <%= @loan_proposal.description %></strong></h5>
-        <h5 class="my-3 pt-3"><strong>Status: <%= @loan_proposal.accepted %></strong></h5>
+        <h5 class="my-3 pt-3"><strong style='color:black'>Valor do montante: <%= @loan_proposal.amount %></strong></h5>
+        <h5 class="my-3 pt-3"><strong style='color:black'>Descrição da proposta: <%= @loan_proposal.description %></strong></h5>
+        <h5 class="my-3 pt-3"><strong style='color:black'>Descrição da proposta: <%= @loan_proposal.description %></strong></h5>
+        <h5 class="my-3 pt-3"><strong style='color:black'>Status: <%= @loan_proposal.accepted %></strong></h5>
       </div>
 
         <%= link_to 'Voltar para Home', user_profile_path %>
         <% if current_user.role == 'investor' && @loan_proposal.accepted != 'Aceito' %>
           <%= link_to 'Aceitar Proposta', accept_loan_path(@loan_proposal) %>
         <% end %>
-
-        <% @var =  %>
-
     </div>
 </div>
