--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -89,7 +89,7 @@
     <div class="home4e6-description text-center">
       <h1>Nossos números</h1>
       <h5>Agricultor</h5>
-      <p class="p-5"><%="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum temporibus, eveniet nobis dolorum excepturi aspernatur nulla ad expedita corporis hic aliquam facere officiis illo necessitatibus. Dolore numquam at porro quos!" * 2%></p>
+      <p class="p-5"><%="Milhares de famílias já se beneficiáram da nossa aplicação, recebendo empréstimo de forma simples, fácil e sem muita burocracia. Agrocash é a maneira mais eficaz de conectar o produtor rural e os investidores que gostariam de variar sua carteira de rendas. Aqui promovemos o melhor negócio para você e sua empresa. Agrocash é confiança. Agrocash é um mundo de possibilidades para o produtor rural e o investidor de negócios" * 2%></p>
     </div>
 
     <div class="cards-agricultor pt-2">
@@ -118,35 +118,35 @@
     <div class="home5-description text-center">
       <h1>Invista com rentabilidade acima da média do mercado</h1>
       <h5 class="p-2">Como funciona os investimentos com a AgroCash</h5>
-      <p class="p-5"><%="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum temporibus, eveniet nobis dolorum excepturi aspernatur nulla ad expedita corporis hic aliquam facere officiis illo necessitatibus. Dolore numquam at porro quos!"%></p>
+      <p class="p-5"><%="Aqui a rentabilidade pode superar investimentos em taxa Selic e anualmente há produtores com ganhos de até 100% do seu investimento inicial"%></p>
     </div>
 
     <div class="cards-investidor pt-2">
       <div class="card-category">
         <div class="card-investidor-info">
           <h2>Faça o seu cadastro</h2>
-          <p>xxx xx xx xxxx xxx xxxxx xxxx x xxxx xxx xxx xx xxxxxx xxxxxx</p>
+          <p>Complete seus dados na nossa página de perfil e garanta já seu pedido de empréstimo</p>
         </div>
       </div>
 
       <div class="card-category">
         <div class="card-investidor-infos">
           <h2>Rodadas de investimento</h2>
-          <p>xxx xx xx xxxx xxx xxxxx xxxx x xxxx xxx xxx xx xxxxxx xxxxxx</p>
+          <p>Aqui seu dinheiro está seguro, pois conectamos você ao produtor com escala de risco</p>
         </div>
       </div>
 
       <div class="card-category">
         <div class="card-investidor-infos">
-          <h2>Invista em empresas</h2>
-          <p>xxx xx xx xxxx xxx xxxxx xxxx x xxxx xxx xxx xx xxxxxx xxxxxx</p>
+          <h2>Invista em pequenos agricultores</h2>
+          <p>Quem alimenta a população brasileira é a agricultura familiar que produz 70%  </p>
         </div>
       </div>
 
       <div class="card-category">
         <div class="card-investidor-infos">
-          <h2>receba mensalmente</h2>
-          <p>xxx xx xx xxxx xxx xxxxx xxxx x xxxx xxx xxx xx xxxxxx xxxxxx</p>
+          <h2>Receba mensalmente</h2>
+          <p>Informações serão enviadas através do aplicativo para você verificar seus rendimentos</p>
         </div>
       </div>
     </div>
@@ -160,7 +160,7 @@
     <div class="text-center home4e6-description">
       <h1>Nossos números</h1>
       <h5>investidor</h5>
-      <p class="p-5"><%="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum temporibus, eveniet nobis dolorum excepturi aspernatur nulla ad expedita corporis hic aliquam facere officiis illo necessitatibus. Dolore numquam at porro quos!"%></p>
+      <p class="p-5"><%="Aqui você pode ter uma rentabilidade de até 100% anual do valor inicial que você escolher pagar. Há um fundo garantidor que possibilita pagamento ou reembolso em caso de perdas, então o retorno é garantido"%></p>
     </div>
 
     <div class="cards-home6 pt-2">
