setando role no sign in

--- a/app/views/pages/_investor.html.erb
+++ b/app/views/pages/_investor.html.erb
@@ -5,7 +5,7 @@
     <div class="row">
       <% @loan_proposals.each do |proposal| %>
 
-      <div class="card-trip">
+      <div class="card-trip mt-5">
         <img src="https://res.cloudinary.com/dxcmhqu2v/image/upload/v1654971139/tomate_k5somf.jpg" />
         <div class="card-trip-infos">
           <div>
