--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -17,6 +17,17 @@
       <%= render 'investor' %>
     <% end %>
     </div>
+
+<!-- Progress Bar -->
+<div class="container3">
+  <ul class="progressbar">
+    <li class="active">Step 1</li>
+    <li class="active">Step 2</li>
+    <li class="active"> Step 3</li>
+  </ul>
+</div>
+
+
 <div class="container">
   <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
