acertandodetalhes do address

--- a/app/views/addresses/show.html.erb
+++ b/app/views/addresses/show.html.erb
@@ -1,11 +1,11 @@
 <div class="container_address">
   <div class="row justify-content-center">
     <div class="col-md-3">
-      <h3 class="mb-5">Show</h3>
-        <p><strong>City: </strong><%= @address.city %></p>
-        <p><strong>Stress: </strong><%= @address.street %></p>
-        <p><strong>Number: </strong><%= @address.number %></p>
-        <p><strong>Neighborhood: </strong><%= @address.neighborhood %></p>
+      <h3 class="mb-5">Endereço</h3>
+        <p><strong>Cidade: </strong><%= @address.city %></p>
+        <p><strong>Rua: </strong><%= @address.street %></p>
+        <p><strong>Número: </strong><%= @address.number %></p>
+        <p><strong>Bairro: </strong><%= @address.neighborhood %></p>
         <p><strong>CEP: </strong><%= @address.cep %></p>
     </div>
   </div>
