Progress Bar Fixed

--- a/app/views/pages/_farmer.html.erb
+++ b/app/views/pages/_farmer.html.erb
@@ -1,10 +1,10 @@
 <div class="card profile">
-        <img src="https://images.unsplash.com/photo-1612428978260-2b9c7df20150?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80" alt="Image">
+         <%= image_tag "https://kitt.lewagon.com/placeholder/users/TamaraToyota"%>
         <div class="details">
-            <h2>Stevie Blight</h2>
-            <p>Director</p>
+            <h2>Tamara Toyota</h2>
+            <p>Agricultor</p>
         </div>
-        <p id="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p id="info">Agricultora familiar desde 1990, profissão oriúnda de práticas familiares.</p>
     </div>
   <div class="nois text-center">
     <div class="card-body">
