--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
       <div class="container">
@@ -21,11 +22,19 @@
 <!-- Progress Bar -->
 <div class="container3">
   <ul class="progressbar">
-    <li class="active">Step 1</li>
-    <li class="active">Step 2</li>
-    <li class="active"> Step 3</li>
+    <li class=<%= @a %>>
+    <i class="fa fa-leaf fa-1x" aria-hidden="true" style="color: green"></i>
+    </li>
+    <li class=<%= @b %>>
+    <i class="fa fa-leaf fa-2x" aria-hidden="true" style="color: green"></i>
+    </li>
+    <li class=<%= @c %>>
+    <i class="fa fa-leaf fa-3x" aria-hidden="true" style="color: green"></i>
+    </li>
   </ul>
 </div>
+
+
 
 
 <div class="container">
