--- a/app/views/pages/_farmer.html.erb
+++ b/app/views/pages/_farmer.html.erb
@@ -1,17 +1,19 @@
 <div class="card profile">
-         <%= image_tag "https://kitt.lewagon.com/placeholder/users/TamaraToyota"%>
+         <%= image_tag "https://kitt.lewagon.com/placeholder/users/Lucas-Ferreira"%>
         <div class="details">
-            <h2>Tamara Toyota</h2>
+            <h2>Lucas Ferreira</h2>
             <p>Agricultor</p>
         </div>
         <p id="info">Agricultora familiar desde 1990, profissão oriúnda de práticas familiares.</p>
+        <%= link_to 'Endereco', new_user_address_path(current_user.id), class: 'btn btn-success' %>
     </div>
   <div class="nois text-center">
     <div class="card-body">
 
       <p class="card-text"><h1>Olá, Produtor</h1> </p>
-      <%= link_to 'Endereco', new_user_address_path(current_user.id), class: 'btn btn-success' %>
       <%= link_to 'Crédito', new_loan_proposal_path, class: 'btn btn-success' %>
+      <%= link_to "Meus dados", new_score_path, class: 'btn btn-success' %>
+
     </div>
   <div class="progress" style="height: 3px">
     <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
