front do new-loan proposal

--- a/app/views/loan_proposals/new.html.erb
+++ b/app/views/loan_proposals/new.html.erb
@@ -1,14 +1,16 @@
-<div class="container_proposal">
-  <h3>Proposta de empréstimo</h3>
-</div>
-
-<div class="proposal">
-  <div class="col-md-4">
-    <%= simple_form_for [@loan_proposal] do |f| %>
-      <%= f.input :amount %>
-      <%= f.input :conditions, :collection => ["12x", "24x", "48x"] %>
-      <%= f.input :description %>
-      <%= f.submit class: "btn-login" %>
-    <% end %>
+<div class="container pt-5 mt-5">
+  <div class="card-product">
+    <img src="https://res.cloudinary.com/dxcmhqu2v/image/upload/v1655247101/trator_zfc91x.jpg" />
+    <div class="card-product-infos">
+      <h3>Proposta de empréstimo</h3>
+      <div class="col-md-3">
+        <%= simple_form_for [@loan_proposal] do |f| %>
+          <%= f.input :amount %>
+          <%= f.input :conditions, :collection => ["12x", "24x", "48x"] %>
+          <%= f.input :description %>
+          <%= f.submit class: "btn-login" %>
+        <% end %>
+      </div>
+    </div>
   </div>
 </div>
