--- a/app/views/scores/new.html.erb
+++ b/app/views/scores/new.html.erb
@@ -1,30 +1,26 @@
-<div class="container_score">
-  <h3> New Scores </h3>
-</div>
+<div class="container mt-5 pt-5 align-itens-center">
+  <div class="row">
+    <div class="col-6">
+      <%= simple_form_for [@score] do |f| %>
+        <h4><strong>Dados Pessoais</strong></h4>
+        <%= f.input :name, :input_html => {:style => 'width: 250px'} %>
+        <%= f.input :lastname, :input_html => {:style => 'width: 250px'} %>
+        <%= f.input :rg, :input_html => {:style => 'width: 250px'} %>
+        <%= f.input :cpf, :input_html => {:style => 'width: 250px'} %>
+        <%= f.input :dap, :input_html => {:style => 'width: 250px'} %>
+        <%= f.input :garantia, collection: ['Sim','Não'],:input_html => {:style => 'width: 250px'} %>
+    </div>
 
-<div class="score1">
-  <div class="col-md-4">
-    <%= simple_form_for [@score] do |f| %>
-      <h4><strong>Dados Pessoais</strong></h4>
-      <%= f.input :name, :input_html => {:style => 'width: 250px'} %>
-      <%= f.input :lastname, :input_html => {:style => 'width: 250px'} %>
-      <%= f.input :rg, :input_html => {:style => 'width: 250px'} %>
-      <%= f.input :cpf, :input_html => {:style => 'width: 250px'} %>
-      <%= f.input :dap, :input_html => {:style => 'width: 250px'} %>
-      <%= f.input :garantia, collection: ['Sim','Não'],:input_html => {:style => 'width: 250px'} %>
-  </div>
-</div>
 
-<div class="score2">
-  <div class="col-md-4">
-    <h4><strong>Dados da Safra</strong></h4>
-    <%= f.input :crop, collection: ['Milho','Tomate'], :input_html => {:style => 'width: 250px'} %>
-    <%= f.input :iniplant %>
-    <%= f.input :endplant %>
-    <%= f.input :experience, :input_html => {:style => 'width: 250px'} %>
-    <%= f.input :ha, :input_html => {:style => 'width: 250px'} %>
-    <%= f.input :annual_income, :input_html => {:style => 'width: 250px'} %>
-    <%= f.button :submit, "Create", class: "btn-login" %>
-  <% end %>
+
+    <div class="col-6">
+      <h4><strong>Dados da Safra</strong></h4>
+      <%= f.input :crop, collection: ['Milho','Tomate'], :input_html => {:style => 'width: 250px'} %>
+      <%= f.input :experience, :input_html => {:style => 'width: 250px'} %>
+      <%= f.input :ha, :input_html => {:style => 'width: 250px'} %>
+      <%= f.input :annual_income, :input_html => {:style => 'width: 250px'} %>
+      <%= f.button :submit, "Create", class: "btn-login" %>
+    <% end %>
+    </div>
   </div>
 </div>
