--- a/app/views/pages/_investor.html.erb
+++ b/app/views/pages/_investor.html.erb
@@ -14,7 +14,7 @@
               <p>Valor: R$ <%= proposal.amount %></p>
               <p>Condições: <%= proposal.conditions %></p>
               <p>Status da Proposta: <%= proposal.accepted %></p>
-              <%= link_to 'Detalhes', loan_proposal_path(proposal) %>
+              <%= link_to 'Detalhes', loan_proposal_path(proposal), class: 'btn btn-success' %>
           </div>
         </div>
       </div>
