--- a/app/views/pages/_farmer.html.erb
+++ b/app/views/pages/_farmer.html.erb
@@ -17,3 +17,12 @@
     <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
   </div>
+
+  <!-- Progress Bar -->
+<div class="container3">
+  <ul class="progressbar">
+    <li class="active">Step 1</li>
+    <li class="active">Step 2</li>
+    <li class="active"> Step 3</li>
+  </ul>
+</div>
