--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -95,15 +95,15 @@
     <div class="cards-agricultor pt-2">
       <div class="card-category">
         <div class="card-agricultor-info text-center">
-          <h2 class="">Valor emprestago para agricultores</h2>
-          <h1 class="pt-4">R$ 537.344.890,00</h1>
+          <h2 class="">Valor invesido em agricultores</h2>
+          <h1 class="pt-4">R$ 890.564.721,00</h1>
           <a class="mt-4 btn btn-agro" href="">Solicitar Agora</a>
         </div>
       </div>
 
       <div class="card-category">
         <div class="card-agricultor-info text-center">
-          <h2 class="">Valor emprestago para agricultores</h2>
+          <h2 class="">Valor emprestado para agricultores</h2>
           <h1 class="pt-4">R$ 537.344.890,00</h1>
           <a class="mt-4 btn btn-agro" href="">Solicitar Agora</a>
         </div>
@@ -125,28 +125,28 @@
       <div class="card-category">
         <div class="card-investidor-info">
           <h2>Faça o seu cadastro</h2>
-          <p>Complete seus dados na nossa página de perfil e garanta já seu pedido de empréstimo</p>
+          <p>E garanta seu pedido de empréstimo</p>
         </div>
       </div>
 
       <div class="card-category">
         <div class="card-investidor-infos">
           <h2>Rodadas de investimento</h2>
-          <p>Aqui seu dinheiro está seguro, pois conectamos você ao produtor com escala de risco</p>
+          <p>Escolha o menor risco para você</p>
         </div>
       </div>
 
       <div class="card-category">
         <div class="card-investidor-infos">
-          <h2>Invista em pequenos agricultores</h2>
-          <p>Quem alimenta a população brasileira é a agricultura familiar que produz 70%  </p>
+          <h2>Invista em agricultores</h2>
+          <p>Agricultura familiar alimenta 70% da população  </p>
         </div>
       </div>
 
       <div class="card-category">
         <div class="card-investidor-infos">
           <h2>Receba mensalmente</h2>
-          <p>Informações serão enviadas através do aplicativo para você verificar seus rendimentos</p>
+          <p>Informações pelo App</p>
         </div>
       </div>
     </div>
@@ -159,7 +159,7 @@
   <section class="home4e6-section">
     <div class="text-center home4e6-description">
       <h1>Nossos números</h1>
-      <h5>investidor</h5>
+      <h5>Investidor</h5>
       <p class="p-5"><%="Aqui você pode ter uma rentabilidade de até 100% anual do valor inicial que você escolher pagar. Há um fundo garantidor que possibilita pagamento ou reembolso em caso de perdas, então o retorno é garantido"%></p>
     </div>
 
@@ -167,7 +167,7 @@
       <div class="card-category">
         <div class="card-agricultor-info text-center">
           <h2 class="">Investimentos Realizados</h2>
-          <h1 class="pt-4">R$ 537.344.890,00</h1>
+          <h1 class="pt-4">R$ 643.928.289,00</h1>
           <a class="mt-4 btn btn-agro" href="">Solicitar Agora</a>
         </div>
       </div>
@@ -175,14 +175,14 @@
       <div class="card-category">
         <div class="card-agricultor-info text-center">
           <h2 class="">Investidores Cadastrados</h2>
-          <h1 class="pt-4">R$ 537.344.890,00</h1>
+          <h1 class="pt-4">123.549</h1>
           <a class="mt-4 btn btn-agro" href="">Solicitar Agora</a>
         </div>
       </div>
 
       <div class="card-category">
         <div class="card-agricultor-info text-center">
-          <h2 class="">Valor emprestago para agricultores</h2>
+          <h2 class="">Valor emprestado para agricultores</h2>
           <h1 class="pt-4">R$ 537.344.890,00</h1>
           <a class="mt-4 btn btn-agro" href="">Solicitar Agora</a>
         </div>
