--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -9,7 +9,7 @@
   background-color: #3F893F;
   text-decoration: none;
   // border-radius: 10%;
-  color: #b8c590;
+  color: white;
   margin-bottom: 15px;
 }
 
