--- a/app/views/pages/_farmer.html.erb
+++ b/app/views/pages/_farmer.html.erb
@@ -31,7 +31,7 @@
     <div class="modal-content">
       <div class="modal-body p-0">
 <!-- Modal -->
-<section>
+<section class="mod">
 <div class="container4">
     <form action="http://localhost:3000/scores" method="post">
       <div class="step step-1 active ">
