--- a/app/assets/stylesheets/components/_multipages.scss
+++ b/app/assets/stylesheets/components/_multipages.scss
@@ -139,7 +139,7 @@
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
 
-section {
+.mod {
   min-height: 100vh;
   width: 100%;
   display: flex;
