--- a/app/views/loan_proposals/new.html.erb
+++ b/app/views/loan_proposals/new.html.erb
@@ -1,14 +1,13 @@
 <div class="container pt-5 mt-5">
   <div class="card-product">
     <img src="https://res.cloudinary.com/dxcmhqu2v/image/upload/v1655247101/trator_zfc91x.jpg" />
-    <div class="card-product-infos">
-      <h3>Proposta de empréstimo</h3>
+    <div class="card-product-infos ml-5">
       <div class= "row">
         <div class="col-lg-8 pt-6">
           <%= simple_form_for [@loan_proposal] do |f| %>
-            <%= f.input :amount %>
-            <%= f.input :conditions, :collection => ["12x", "24x", "48x"] %>
-            <%= f.input :description %>
+            <%= f.input :amount, label: 'Valor pretendido' %>
+            <%= f.input :conditions, label: 'Condicões', :collection => ["12x", "24x", "48x"] %>
+            <%= f.input :description, label: 'Descricão' %>
             <%= f.submit class: "btn-login" %>
           <% end %>
         </div>
