--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -11,6 +11,18 @@
   // border-radius: 10%;
   color: white;
   margin-bottom: 15px;
+  border: none;
+}
+
+.btn-proposals {
+  background-color: #3F893F;
+  text-decoration: none;
+  // border-radius: 10%;
+  color: white;
+  margin-bottom: 15px;
+  border: none;
+  padding: 9px;
+  width: 100px;
 }
 
 .btn-login:hover {
