--- a/app/assets/stylesheets/components/_multipages.scss
+++ b/app/assets/stylesheets/components/_multipages.scss
@@ -30,6 +30,7 @@
   overflow: hidden;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }
+
 .card img{
   width: 180px;
   height: 180px;
@@ -48,11 +49,11 @@
 }
 
 .container3 {
-  width: 100%;
+  width: 500px;
   color: white;
-  background: #2979FF;
+  background: white;
   font-family: 'Roboto', sans-serif;
-  margin-top: 10%;
+  margin-top: 20%;
 }
 
 .progressbar {
