--- a/app/views/loan_proposals/new.html.erb
+++ b/app/views/loan_proposals/new.html.erb
@@ -1,15 +1,14 @@
-<div class="container pt-5 mt-5">
+<div class="container pt-5 mt-5 pl-5">
   <div class="card-product">
     <img src="https://res.cloudinary.com/dxcmhqu2v/image/upload/v1655247101/trator_zfc91x.jpg" />
-    <div class="card-product-infos">
-      <h3>Proposta de empréstimo</h3>
+    <div class="card-product-infos ml-5">
       <div class= "row">
         <div class="col-lg-8 pt-6">
           <%= simple_form_for [@loan_proposal] do |f| %>
-            <%= f.input :amount %>
-            <%= f.input :conditions, :collection => ["12x", "24x", "48x"] %>
-            <%= f.input :description %>
-            <%= f.submit class: "btn-login" %>
+            <%= f.input :amount, label: 'Valor pretendido', :input_html => {:style=> 'width: 400px'} %>
+            <%= f.input :conditions, label: 'Condicões', :collection => ["12x", "24x", "48x"], :input_html => {:style=> 'width: 400px'} %>
+            <%= f.input :description, label: 'Descricão', :input_html => {:style=> 'width: 400px'} %>
+            <%= f.submit "Criar", class: "btn-proposals" %>
           <% end %>
         </div>
       </div>
