--- a/app/views/pages/_farmer.html.erb
+++ b/app/views/pages/_farmer.html.erb
@@ -16,6 +16,21 @@
 
       <%= link_to "Meus dados", "#", class: 'btn btn-login' , data: {bs_toggle: "modal", bs_target: "#exampleModal"} %>
       <%= link_to 'Crédito', new_loan_proposal_path, class: 'btn btn-login' %>
+
+      <!-- Progress Bar -->
+      <div class="container3">
+        <ul class="progressbar">
+          <li class=<%= @a %>>
+
+          </li>
+          <li class=<%= @b %>>
+
+          </li>
+          <li class=<%= @c %>>
+
+          </li>
+        </ul>
+      </div>
     </div>
   <div class="progress" style="height: 3px">
     <div class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
@@ -23,7 +38,6 @@
   </div>
 </div>
 
-<div class="container4">
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
